# ProtocOptimizations

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  main.cpp  main_python.py  test.proto
test_subdir/: BUILD  subdir_test.proto
toolchains/: BUILD  requirements_lock.txt
