###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "nanopb", version = "0.4.9.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "toolchains_protoc", version = "0.4.1")
bazel_dep(name = "rules_proto", version = "7.1.0")

# This is overridden despite being in BCR since it contains protoc v31.1. We can remove this once BCR updates
#archive_override(
#    module_name = "toolchains_protoc",
#    sha256 = "a694e39b16064011c11ce8719207736d1cd2ed5f56a4c73534174da7eea0dd2e",
#    strip_prefix = "toolchains_protoc-ea1a220e47b4c9c654f3bd198107c605ae27cf06",
#    url = "https://github.com/aspect-build/toolchains_protoc/archive/ea1a220e47b4c9c654f3bd198107c605ae27cf06.tar.gz",
#)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

#python.defaults(python_version = "3.12")
python.toolchain(
    #    is_default = True,
    python_version = "3.12",
)

# Configure proto compiler optimization
# Optional: choose a version of protoc rather than the latest.
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    # Creates a repository to satisfy well-known-types dependencies such as
    # deps=["@com_google_protobuf//:any_proto"]
    google_protobuf = "com_google_protobuf",
    # Pin to any version of protoc
    version = "v29.3",
)
use_repo(protoc, "com_google_protobuf", "toolchains_protoc_hub")

register_toolchains("@toolchains_protoc_hub//:all")

# NB: the `:all` here is critical, because `proto_lang_toolchain` expands into two targets:
# - proto_lang_toolchain rule [name]
# - toolchain rule [name]_toolchain
# and the second one is valid for registration.
# Attempting to register a proto_lang_toolchain rule as a toolchain gives a baffling error like
# Misconfigured toolchains: //tools:protoc_java_toolchain is declared as a toolchain but has inappropriate dependencies.
# Declared toolchains should be created with the 'toolchain' rule and should not have dependencies that themselves require toolchains.
register_toolchains("//toolchains:all")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "protoc_deps",
    python_interpreter = "/opt/tbotspython/bin/python",
    python_version = "3.12",
    requirements_lock = "//toolchains:requirements_lock.txt",
)
use_repo(pip, "protoc_deps")
